<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="360dp"
	android:layout_height="702dp">
	<!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		home
     *	@date 		1633139826791
     *	@title 		Page 1
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->

	<RelativeLayout
		android:id="@+id/content_container"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">


		<RelativeLayout
			android:id="@+id/page_screen2_ek1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="0dp"
			android:layout_marginTop="0dp">

			<View
				android:id="@+id/_bg__screen2_ek2"
				android:layout_width="360dp"
				android:layout_height="702dp"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:background="@drawable/grafik_1_ek3" />


			<View
				android:id="@+id/rectangle_24"
				android:layout_width="360dp"
				android:layout_height="59dp"
				android:layout_marginStart="0dp"
				android:layout_marginTop="155dp"
				android:alpha="0.75"
				android:background="@drawable/rectangle_24_shape" />

			<ImageView
				android:id="@+id/subtract_ek12"
				android:layout_width="42dp"
				android:layout_height="42dp"
				android:layout_marginStart="304dp"
				android:layout_marginTop="165dp"
				android:contentDescription="subtract_ek12"
				android:src="@drawable/subtract_ek12" />

			<View
				android:id="@+id/rectangle_25"
				android:layout_width="285dp"
				android:layout_height="76dp"
				android:layout_marginStart="10dp"
				android:layout_marginTop="240dp"
				android:alpha="0.75"
				android:background="@drawable/rectangle_25_shape" />

			<TextView
				android:id="@+id/value1"
				android:layout_width="227dp"
				android:layout_height="56dp"
				android:layout_marginLeft="88dp"
				android:layout_marginTop="278dp"
				android:fontFamily="Roboto"
				android:text="@string/value1_string"
				android:textColor="@color/_bg__home_ek2_color"
				android:textSize="30sp" />

			<View
				android:id="@+id/rectangle_26"
				android:layout_width="282dp"
				android:layout_height="76dp"
				android:layout_marginStart="10dp"
				android:layout_marginTop="355dp"
				android:alpha="0.75"
				android:background="@drawable/rectangle_26_shape" />

			<View
				android:id="@+id/rectangle_27"
				android:layout_width="279dp"
				android:layout_height="76dp"
				android:layout_marginStart="11dp"
				android:layout_marginTop="470dp"
				android:alpha="0.75"
				android:background="@drawable/rectangle_27_shape" />

			<View
				android:id="@+id/rectangle_28"
				android:layout_width="280dp"
				android:layout_height="76dp"
				android:layout_marginStart="10dp"
				android:layout_marginTop="585dp"
				android:alpha="0.75"
				android:background="@drawable/rectangle_28_shape" />

			<ImageView
				android:id="@+id/pfeilwinkel_nach_unten_1"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:layout_marginStart="304dp"
				android:layout_marginTop="598dp"
				android:contentDescription="pfeilwinkel_nach_unten_1"
				android:src="@drawable/pfeilwinkel_nach_unten_1" />

			<TextView
				android:id="@+id/parameter1"
				android:layout_width="227dp"
				android:layout_height="56dp"
				android:layout_marginLeft="88dp"
				android:layout_marginTop="243dp"
				android:fontFamily="Roboto"
				android:text="@string/parameter1_string"
				android:textColor="@color/_bg__home_ek2_color"
				android:textSize="30sp" />

			<TextView
				android:id="@+id/value2"
				android:layout_width="225dp"
				android:layout_height="56dp"
				android:layout_marginLeft="87dp"
				android:layout_marginTop="393dp"
				android:fontFamily="Roboto"
				android:text="@string/value2_string"
				android:textColor="@color/_bg__home_ek2_color"
				android:textSize="30sp" />

			<TextView
				android:id="@+id/parameter2"
				android:layout_width="225dp"
				android:layout_height="56dp"
				android:layout_marginLeft="87dp"
				android:layout_marginTop="358dp"
				android:fontFamily="Roboto"
				android:text="@string/parameter2_string"
				android:textColor="@color/_bg__home_ek2_color"
				android:textSize="30sp" />

			<TextView
				android:id="@+id/value3"
				android:layout_width="224dp"
				android:layout_height="56dp"
				android:layout_marginLeft="86dp"
				android:layout_marginTop="508dp"
				android:fontFamily="Roboto"
				android:text="@string/value3_string"
				android:textColor="@color/_bg__home_ek2_color"
				android:textSize="30sp" />

			<TextView
				android:id="@+id/parameter3"
				android:layout_width="224dp"
				android:layout_height="56dp"
				android:layout_marginLeft="86dp"
				android:layout_marginTop="473dp"
				android:fontFamily="Roboto"
				android:text="@string/parameter3_string"
				android:textColor="@color/_bg__home_ek2_color"
				android:textSize="30sp" />

			<TextView
				android:id="@+id/value4"
				android:layout_width="224dp"
				android:layout_height="56dp"
				android:layout_marginLeft="86dp"
				android:layout_marginTop="623dp"
				android:fontFamily="Roboto"
				android:text="@string/value4_string"
				android:textColor="@color/_bg__home_ek2_color"
				android:textSize="30sp" />

			<TextView
				android:id="@+id/parameter4"
				android:layout_width="224dp"
				android:layout_height="56dp"
				android:layout_marginLeft="86dp"
				android:layout_marginTop="588dp"
				android:fontFamily="Roboto"
				android:text="@string/parameter4_string"
				android:textColor="@color/_bg__home_ek2_color"
				android:textSize="30sp" />

			<ImageView
				android:id="@+id/subtract_ek13"
				android:layout_width="42dp"
				android:layout_height="42dp"
				android:layout_marginStart="11dp"
				android:layout_marginTop="165dp"
				android:contentDescription="subtract_ek13"
				android:src="@drawable/subtract_ek13" />

			<ImageView
				android:id="@+id/platzhalter_2"
				android:layout_width="60dp"
				android:layout_height="60dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="248dp"
				android:contentDescription="platzhalter_2"
				android:src="@drawable/platzhalter_2" />

			<ImageView
				android:id="@+id/sportwagen_2"
				android:layout_width="60dp"
				android:layout_height="60dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="363dp"
				android:contentDescription="sportwagen_2"
				android:src="@drawable/sportwagen_2" />

			<ImageView
				android:id="@+id/schlussel_2"
				android:layout_width="60dp"
				android:layout_height="60dp"
				android:layout_marginStart="17dp"
				android:layout_marginTop="478dp"
				android:contentDescription="schlussel_2"
				android:src="@drawable/schlussel_2" />

			<ImageView
				android:id="@+id/motoren_2"
				android:layout_width="60dp"
				android:layout_height="60dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="593dp"
				android:contentDescription="motoren_2"
				android:src="@drawable/motoren_2" />

			<ImageView
				android:id="@+id/pfeilwinkel_nach_oben_1"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:layout_marginStart="304dp"
				android:layout_marginTop="248dp"
				android:contentDescription="pfeilwinkel_nach_oben_1"
				android:src="@drawable/pfeilwinkel_nach_oben_1" />


			<RelativeLayout
				android:id="@+id/group_4_ek3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="0dp"
				android:layout_marginTop="49dp">

				<View
					android:id="@+id/rectangle_1_ek3"
					android:layout_width="360dp"
					android:layout_height="90dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:alpha="0.89999997615814"
					android:background="@drawable/rectangle_1_ek3_shape" />

				<ImageView
					android:id="@+id/brilhon_1_ek3"
					android:layout_width="340dp"
					android:layout_height="90dp"
					android:layout_marginStart="10dp"
					android:layout_marginTop="0dp"
					android:contentDescription="brilhon_1_ek3"
					android:src="@drawable/brilhon_1_ek3" />

			</RelativeLayout>

		</RelativeLayout>


	</RelativeLayout>
</RelativeLayout>